# duckdb_bigtable

./: .dockerignore  .dokerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_linux_amd64  Dockerfile_linux_amd64_gcc4  Dockerfile_linux_amd64_gcc4_test  Dockerfile_linux_amd64_musl  Justfile  Makefile  README.md  compile_commands.json  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: bigtable2_extension.cpp  product.cpp  search.cpp  utils.cpp
src/include/: bigtable2_extension.hpp  product.hpp  quack_extension.hpp  search.hpp  utils.hpp
test/sql/: bigtable2.test
